# portfolio

./: MEMORY.md  POS  README.md  USER.md  carbon_footprint_paper_thai.html  check_reminders.py  client-interview-guide-van-sales.md  cv.html  edit_meeting.py  index.html  meeting_v3.docx  meeting_v4.docx  paper_thai.txt  paper_thai_corrected.html  paper_thai_exact.html  paper_thai_final.html  paper_thai_with_images.html  portfolio.html  portfolio.md  reminders.md
.trash/docs/: README.md  docusaurus.config.js  export-pdf.js  package-lock.json  package.json  sidebars.js
.trash/docs/docs/: contact.md  faq.md  index.md
.trash/docs/docs/features/: dashboard.md  settings.md  user-management.md
.trash/docs/docs/getting-started/: first-login.md  installation.md  requirements.md
.trash/docs/docs/screenshots/: overview.md  (+2 more)
mcp-thaipdf/: README.md  pyproject.toml
mcp-thaipdf/mcp_thaipdf/: __init__.py  server.py
meeting_v3_extracted/customXml/: item1.xml  item4.xml  itemProps1.xml  itemProps2.xml  itemProps3.xml  itemProps4.xml
meeting_v3_extracted/docProps/: app.xml  core.xml  custom.xml
meeting_v3_extracted/word/: document.xml  endnotes.xml  fontTable.xml  footer1.xml  footnotes.xml  header1.xml  numbering.xml  settings.xml  styles.xml  webSettings.xml
meeting_v3_extracted/word/_rels/: document.xml.rels  settings.xml.rels
memory/: 2026-02-15-1247.md  2026-02-15-1533.md  2026-02-15.md  2026-02-16-0515.md  2026-02-16-1019.md  2026-02-16-1136.md  2026-02-16-1247.md  2026-02-16-1558.md  2026-02-16.md  2026-02-17-0810.md  2026-02-17-0820.md  2026-02-20.md
