[project]
name = "mcp-thaipdf"
version = "0.1.0"
description = "PDF generator with Thai language support"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fpdf2>=2.7.0",
]

[project.optional-dependencies]
html = ["weasyprint>=60.0"]
mcp = ["mcp>=1.0.0"]

[project.scripts]
thaipdf = "mcp_thaipdf.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
